# Continual-Hate

./: .gitignore  pyproject.toml  requirements.txt
Results/LLMs/1. Baseline Zero Shot/: df_llm_zero_shot.csv  process_experiments.ipynb
Results/LLMs/2. Baseline Few Shots/: df_llm_few_shot.csv  process_experiments.ipynb
Results/PLMs/1. Baseline FT/: FacebookAI-roberta-base_SEQ_CLS_BASIC_FT_davidson__RESULTS.json  FacebookAI-roberta-base_SEQ_CLS_BASIC_FT_davidson__TRAIN-LOGS.json  FacebookAI-roberta-base_SEQ_CLS_BASIC_FT_evalita__RESULTS.json  FacebookAI-roberta-base_SEQ_CLS_BASIC_FT_evalita__TRAIN-LOGS.json  FacebookAI-roberta-base_SEQ_CLS_BASIC_FT_founta_hateful_57k__RESULTS.json  FacebookAI-roberta-base_SEQ_CLS_BASIC_FT_founta_hateful_57k__TRAIN-LOGS.json  FacebookAI-roberta-base_SEQ_CLS_BASIC_FT_hateval-immigrant__RESULTS.json  FacebookAI-roberta-base_SEQ_CLS_BASIC_FT_hateval-immigrant__TRAIN-LOGS.json  FacebookAI-roberta-base_SEQ_CLS_BASIC_FT_hateval-women__RESULTS.json  FacebookAI-roberta-base_SEQ_CLS_BASIC_FT_hateval-women__TRAIN-LOGS.json  FacebookAI-roberta-base_SEQ_CLS_BASIC_FT_ibereval__RESULTS.json  FacebookAI-roberta-base_SEQ_CLS_BASIC_FT_ibereval__TRAIN-LOGS.json  FacebookAI-roberta-base_SEQ_CLS_BASIC_FT_waseem-racism__RESULTS.json  FacebookAI-roberta-base_SEQ_CLS_BASIC_FT_waseem-racism__TRAIN-LOGS.json  FacebookAI-roberta-base_SEQ_CLS_BASIC_FT_waseem-sexism__RESULTS.json  df_plm_ft.csv  (+34 more)
continual_hate/: constants.py  continual_learning_techniques.py  datasets.py  datastreams.py  experiments.py  metrics.py  models.py  processing.py  trainer.py  utils.py
(+42 files in other folders)
